--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>YOOOOOOOOO</h1>
-    <a href="/project1/student-grade-evaluation.ipynb"></a>
+    <a href="/project1/student-grade-evaluation.ipynb">lollll</a>
   </body>
 </html>
