--- a/case-studies/student-grade-evaluation.html
+++ b/case-studies/student-grade-evaluation.html
@@ -28,7 +28,7 @@
         text-rendering: optimizeLegibility;
         font-kerning: normal;
       }
-      @media (max-width: 600px) {
+      @media (max-width: 100%) {
         body {
           font-size: 0.9em;
           padding: 1em;
@@ -62,7 +62,7 @@
         color: #1a1a1a;
       }
       img {
-        max-width: 100%;
+        max-width: 80%;
       }
       h1,
       h2,
